# PDS_Project

./: .gitignore  README.md
Client/: CMakeLists.txt  SocketServer.h  main.cpp
Client/Communication/: Communication.cpp  Communication.h
Client/Crypto/: MyCryptoLibrary.cpp  MyCryptoLibrary.h
Client/DB/: Database.h  filippo.db-journal  server.db  user.db
Client/Entities/Database/: Database.cpp  Database.h
Client/Entities/Directory/: Directory.cpp  Directory.h
Client/Entities/Exceptions/: MyExceptions.h
Client/Entities/File/: File.cpp  File.h
Client/Entities/FileWatcher/: FileWatcher.h
Client/Entities/Socket/: Socket.cpp  Socket.h
Client/FileManager/: Base.cpp  Base.h  Directory.cpp  Directory.h  File.cpp  File.h  FileWatcher.cpp  FileWatcher.h
Client/TCP_Socket/: Socket.cpp  Socket.h
Client/Usefull functions/: constants.h  main_functions.h  utilities.h
Client/Usefull functions/Communication/: Communication.h
Client/Usefull functions/Crypto/: MyCryptoLibrary.h
Client/usefull_functions/: main_functions.h
Server/: .gitignore  CMakeLists.txt  Socket.cpp  main.cpp
Server/Communication/: Communication.cpp  Communication.h
Server/Crypto/: MyCryptoLibrary.cpp  MyCryptoLibrary.h
Server/DB/: Database.h  filippo.db-journal  user.db  username.db
Server/Entities/Database/: Database.h
Server/Entities/Directory/: Directory.cpp  Directory.h
Server/Entities/Exceptions/: MyExceptions.h
Server/Entities/File/: File.cpp  File.h
Server/Entities/Socket/: Socket.cpp  Socket.h
Server/Entities/SocketServer/: SocketServer.cpp  SocketServer.h
Server/Entities/User/: User.h
Server/FileManager/: Directory.cpp  Directory.h  File.cpp  File.h
Server/Log/: log.txt
Server/TCP_Socket/: Socket.cpp  Socket.h
Server/Usefull functions/: constants.h  main_functions.h  utilities.h
Server/Usefull functions/Communication/: Communication.h
Server/Usefull functions/Crypto/: MyCryptoLibrary.h
Server/User/: User.h
Server/usefull_functions/: main_functions.h
